@@ -78,8 +78,8 @@ public final class MessageHandler {
                         if (CollectionUtils.isNotEmpty(datas)) {
 
                             String transId = CommonUtil.getTransactionID();
-                            LOGGER.debug("receive message by thread[{0}], transId[{1}]", Thread.currentThread().getId(),
-                                transId);
+                            LOGGER.debug("receive message by thread[{0}], transId[{1}]",
+                                Thread.currentThread().threadId(), transId);
 
                             for (byte[] data : datas) {
                                 MessageThreadPoolExecutor.execute(channel,
@@ -102,6 +102,7 @@ public final class MessageHandler {
                 LoggerUtil.error(e);
             }
         });
+        thread.setName("Scanner_" + channel + thread.getId());
         thread.setDaemon(true);
         thread.start();
     }
